chore: update dependencies and devDependencies in package.json

--- a/web/package.json
+++ b/web/package.json
@@ -17,28 +17,28 @@
   "dependencies": {
     "@iconify/vue": "^5.0.0",
     "pinia": "^3.0.3",
-    "vue": "^3.5.21"
+    "vue": "^3.5.22"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.9.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.36.0",
-    "eslint-plugin-oxlint": "~1.16.0",
-    "eslint-plugin-vue": "~10.4.0",
-    "jiti": "^2.5.1",
+    "eslint": "^9.38.0",
+    "eslint-plugin-oxlint": "^1.24.0",
+    "eslint-plugin-vue": "~10.5.1",
+    "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.16.0",
+    "oxlint": "~1.24.0",
     "postcss-nested": "^7.0.2",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "3.6.2",
-    "typescript": "~5.9.2",
-    "vite": "^7.1.6",
-    "vite-plugin-vue-devtools": "^8.0.2",
-    "vue-tsc": "^3.0.7"
+    "typescript": "~5.9.3",
+    "vite": "^7.1.12",
+    "vite-plugin-vue-devtools": "^8.0.3",
+    "vue-tsc": "^3.1.2"
   }
 }
